# mqtt-cli-rs

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: config.rs  main.rs
