[package]
name = "mqtt-cli-rs"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
version = "0.1.0"
description = "An MQTT Command Line Interface built with rumqttc"
license = "Apache-2.0"
repository = "https://github.com/de-sh/mqtt-cli-rs"
edition = "2021"
keywords = ["mqtt", "iot", "cli"]
categories = ["network-programming"]

[dependencies]
rumqttc = { version = "0.20", features = [] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }